# songquiz

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  style.css
client/: Cargo.toml
client/src/: lib.rs
client/src/admin/: guessing.rs  listening.rs  mod.rs  selection.rs  teams.rs
client/src/buzzer/: mod.rs
client/src/spectator/: mod.rs  teams.rs
src/: admin.rs  buzzer.rs  game.rs  main.rs  names.rs  spectator.rs
types/: Cargo.toml
types/src/: game.rs  lib.rs  message.rs  track.rs
